src/main/java/com/example/restpolygon/error/exception/UserAlreadyExists.java
package com.example.restpolygon.error.exception;

public class UserAlreadyExists extends Exception {
	public UserAlreadyExists(String message) {
		super(message);
	}

}
